tests/semantic/invalid/test_duplicate_decl.src
fn foo() : void {
    int x = 1;
    int x = 2;
}
